--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width, shrink-to-fit=no"/>
+    <!-- Business manager - overeni domeny -->
+    <meta name="facebook-domain-verification" content="8a4fhiryvw1ldcmtnqrwik1ehu9sbw" />
     <title>Den Otevřených Dveří | SPŠSE a VOŠ Liberec</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style/reboot.css" />
@@ -34,7 +36,6 @@
     <link rel="stylesheet" href="style/hamburger.css">
     <link rel="stylesheet" href="style/components.css" />
     <link rel="stylesheet" href="style/layout.css" />
-
     <!-- Facebook Pixel Code -->
     <script>
       !function(f,b,e,v,n,t,s)
@@ -68,7 +69,7 @@
       <nav class="top-nav hamburger-nav">
         <ul>
           <li><a class="logo-spsse" href="https://pslib.cz/" target="_blank"><span>SPŠSE a VOŠ Liberec</span></a></li>
-          <li><a class="off-img-tree" href="#zakladni-informace"><span>program akce</span></a></li>
+          <li><a class="off-img-tree" href="#online-konference"><span>online konference</span></a></li>
           <li><a class="off-img-tree" href="#obory"><span>studijní obory</span></a></li>
           <li><a class="off-img-user-plus" href="#prijimacky"><span>přijímací řízení</span></a></li>
           <li><a class="off-img-360" href="https://prohlidka.pslib.cz/"><span>virtuální prohlídka</span></a></li>
@@ -77,85 +78,82 @@
       </nav>
       <div class="content">
         <h1>
-          Den otevřených dveří <span>SPŠSE a VOŠ Liberec</span>
+          Den otevřených dveří <span>Virtuální prohlídka a online konference</span>
         </h1>
-        <p class="center header-intro">
-          Vítejte na webu dne otevřených dveří průmyslové školy v Liberci. Rádi bychom vás tímto pozvali na nejbližší den otevřených dveří, který se <strong>v prezenční formě</strong> uskuteční <b>v&nbsp;pátek&nbsp;17.&nbsp;12.&nbsp;2021</b>, a to <b>od&nbsp;9:00&nbsp;do&nbsp;15:00</b>.
-        </p>  
-        <p class="center">
-          <a class="btn btn-big" href="#zakladni-informace">více informací</a>
+        <p>
+          Vážení uchazeči, vážení rodiče, přátelé školy, vítejte na dnech
+          otevřených dveří <b>SPŠSE a VOŠ Liberec</b>. Je nám líto, že se v tomto termínu s&nbsp;
+          vámi, vzhledem k současné koronavirové situaci, nemůžeme vidět osobně.
         </p>
+        <p>
+          <!-- <strong>Nevzdali jsme se</strong>.--> Připravili jsme pro vás virtuální 
+          prohlídku školy ve formátu 360°, díky které si můžete naši průmyslovou
+          školu, její učebny a laboratoře prohlédnout doslova ze všech úhlů.
+          Prohlídku jsme doplnili <b>zajímavými informacemi a videi</b> 
+          s&nbsp;vyučujícími a garanty oborů. <b>V sobotu 29. 1. 2022</b> jsme pro vás také k dispozici prostřednictvím <a href="#online-konference">online konference</a>.
+        </p>
+        <!-- <p>
+          Pojďme se seznámit alespoň online. <span class="img-smile"></span>
+        </p> -->
+        <p class="center">
+          <a class="btn btn-big" href="https://prohlidka.pslib.cz/" target="_blank">spustit prohlídku</a>
+        </p>
+        <!-- <a class="arrow bounce" href="#"></a> -->
       </div>
     </header>
-    <main class="container-fluid">
-    <section class="content" id="zakladni-informace">
-        <h2>Základní informace k události</h2>
-        <h3>Termín a čas události</h3>
-        <p>Nejblizší den otevřených dveří proběhne <b>v pátek 17. 12. 2021 od 9:00 do 15:00 hodin</b>. Akce bude po celou tuto dobu přístupná, proběhne <strong>prezenčně</strong>, a to za <a href="#opatreni">dodržení platných opatření.</a></p>
-        <h3>Průběh akce</h3>
-        <p>Akce je pořádána v prezenční formě <a href="https://pslib.cz/kontakty" target="_blank">v prostorech naší průmyslové školy</a>. Sejdeme se s vámi ve sborovně školy, kde se vás ujmou naši pedagogové, kteří vám budou po dobu dnu otevřených dveří k&nbsp;dispozici a&nbsp;<b>provedou vás po učebnách, laboratořích i dílnách</b>.
-           Připravili jsme si pro vás malé občerstvení a&nbsp;také propagační materiály pro lepší orientaci v&nbsp;nabízených studijních oborech. Rovněž vám <b>zodpovíme veškeré dotazy</b> a&nbsp;<b>podáme vám blizší informace k&nbsp;přijímacímu řízení</b>.</p>
-        <h3 id="opatreni">Opatření COVID-19</h3>
-        <p>Vzhledem k současné situaci je účast na dnu otevřených dveří podmíněna 14 dny po ukončeném očkování či 180 dny ochranné lhůty po prodělání COVID-19. Opatření se vztahuje pouze na <b>zletilé účastníky</b> dne otevřených dvěří. Děkujeme za pochopení a respektování.</p>
-    </section>
-    
-    <!-- Odpočet 
-     <section class="content bgblue">
-        <h2>Těšíme se na vás!</h2>
-        <p id="stavova-hlaska" class="center">První letošní den otevřených dvěří průmyslové školy startuje již <strong>15. 12. 2021 od 8:00</strong>. Rádi vás provedeme po škole a zodpovíme jakékoliv otázky.</p>
-        <div class="countdown">
-          <div>
-              <span>dní</span>
-              <span id="day">00</span>
-          </div>
-          <div>
-              <span>hodin</span>
-              <span id="hour">00</span>
-          </div>
-          <div>
-              <span>minut</span>
-              <span id="minute">00</span>
-          </div>
-          <div>
-              <span>sekund</span>
-              <span id="second">00</span>
-          </div>
-      </div>
-      </section>
-      -->
-      
-      <!-- Online model dne otevřených dveří -->
-      <!--
-      <section class="content">
-        <h2>Jsme tu pro Vás online <span>právě&nbsp;teď</span>!</h2>
+    <main class="container-fluid">      
+      <section class="content" id="online-konference">
+        <h2>Online konference</h2>
+        <!-- <h2>Jsme tu pro vás online <span>právě&nbsp;teď</span>!</h2> -->
         <p>
           Zavolejme si nebo si napišme, naši zástupci školy, vyučující i garanti
           oborů se na vás těší! Formou
-          <b>videokonference nebo živých chatů</b> vám
-          <b>11.2.2021</b> v&nbsp;čase <b>od&nbsp;9:00 do&nbsp;16:00</b> rádi
+          <b>videokonference nebo živých chatů</b> vám v&nbsp;sobotu&nbsp;
+          <b>29.&nbsp;1.&nbsp;2022</b> v&nbsp;čase <b>od&nbsp;10:00 do&nbsp;15:00</b> rádi
           poskytneme informace, odpovíme na dotazy ke studiu, anebo na cokoliv,
-          co vás zajímá. Nebojte se, nekoušeme.
+          co vás zajímá.
         </p>
+
+        <section class="content bgblue" style="padding-top: 1.5em;">
+          <p id="stavova-hlaska" class="center">Zde <b>v sobotu 29. 1. 2022 od 10:00</b> naleznete odkazy na online konference.</p>
+          <div class="countdown">
+            <div>
+                <span>dní</span>
+                <span id="day">00</span>
+            </div>
+            <div>
+                <span>hodin</span>
+                <span id="hour">00</span>
+            </div>
+            <div>
+                <span>minut</span>
+                <span id="minute">00</span>
+            </div>
+            <div>
+                <span>sekund</span>
+                <span id="second">00</span>
+            </div>
+        </div>
+        </section>
+
+        <!--
         <h3>Online konference - <span>dotazy&nbsp;živě</span></h3>
         <ul class="livecards">
-          <li><a class="btn btn-live" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-join%2F19%3Ameeting_YTYzYjM1MzAtYjgxMi00ZTA2LTkwNDUtOTQxYjg2Mzg1NWUw%40thread.v2%2F0%3Fcontext%3D%257b%2522Tid%2522%253a%2522e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%2522%252c%2522Oid%2522%253a%25224b26be16-cbcd-4f1e-8dd1-bc6aca28f563%2522%257d%26anon%3Dtrue&type=meetup-join&deeplinkId=8160abe5-b80e-4eaa-9d4c-87cc5cebcb10&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true"
+          <li><a class="btn btn-live" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MjI0N2E0OGMtYmM1Ny00NDJkLTgyOGMtNmQwZDc3NjZhNDcw%40thread.v2/0?context=%7b%22Tid%22%3a%22e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%22%2c%22Oid%22%3a%22ec7aa896-dc1c-44ac-9acc-be79b5890781%22%7d"
               >přijímací řízení a obecné</a>
           </li>
-          <li><a class="btn btn-live" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-join%2F19%3Ameeting_YThjMzZkNDEtZGY3Yi00ZjBkLTgxMWYtYzY3YzRmNTRiZTRi%40thread.v2%2F0%3Fcontext%3D%257b%2522Tid%2522%253a%2522e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%2522%252c%2522Oid%2522%253a%25224b26be16-cbcd-4f1e-8dd1-bc6aca28f563%2522%257d%26anon%3Dtrue&type=meetup-join&deeplinkId=ecf85096-fdde-4bf2-a96e-fad6642e1c9d&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true"
+          <li><a class="btn btn-live" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_NmM5OTQzNGQtOGU4MC00MDdlLWIwMGQtMzdjMTAxZDlhNjIy%40thread.v2/0?context=%7b%22Tid%22%3a%22e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%22%2c%22Oid%22%3a%22ec7aa896-dc1c-44ac-9acc-be79b5890781%22%7d"
               >elektrotechnika</a>
           </li>
-          <li><a class="btn btn-live" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-join%2F19%3Ameeting_YmU3MTE5YmEtOGMwMC00NjY1LTk5NzYtNmRiZWJkN2MyYTFj%40thread.v2%2F0%3Fcontext%3D%257b%2522Tid%2522%253a%2522e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%2522%252c%2522Oid%2522%253a%25224b26be16-cbcd-4f1e-8dd1-bc6aca28f563%2522%257d%26anon%3Dtrue&type=meetup-join&deeplinkId=973b5ba2-ee52-49bb-8b0c-093bcaddeaf8&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true"
+          <li><a class="btn btn-live" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzMyYzFkOTAtZTZkMy00ZTRlLTlmNzAtODhjMThlMTQzODRl%40thread.v2/0?context=%7b%22Tid%22%3a%22e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%22%2c%22Oid%22%3a%22ec7aa896-dc1c-44ac-9acc-be79b5890781%22%7d"
               >informační technologie</a>
           </li>
-          <li><a class="btn btn-live" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-join%2F19%3Ameeting_OGFkNzhhZWMtMTc1NC00YzBmLTgzNWMtNGVlOTBjMmMwODUx%40thread.v2%2F0%3Fcontext%3D%257b%2522Tid%2522%253a%2522e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%2522%252c%2522Oid%2522%253a%25224b26be16-cbcd-4f1e-8dd1-bc6aca28f563%2522%257d%26anon%3Dtrue&type=meetup-join&deeplinkId=71821e74-d177-40b9-98f5-d22e1ff6eff2&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true"
+          <li><a class="btn btn-live" href="https://teams.microsoft.com/l/meetup-join/19%3ameeting_MTg5NjBlYzctYjIyZi00ZTcxLTkwNjEtNmUxODEzY2VlYzhi%40thread.v2/0?context=%7b%22Tid%22%3a%22e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%22%2c%22Oid%22%3a%22ec7aa896-dc1c-44ac-9acc-be79b5890781%22%7d"
               >strojírenství</a>
           </li>
-          <li><a class="btn btn-live" href="https://teams.microsoft.com/dl/launcher/launcher.html?url=%2F_%23%2Fl%2Fmeetup-join%2F19%3Ameeting_ZmE4NGFlNmMtYjUwNy00MWM2LWJjMDUtMzNlNzIwODU0M2U3%40thread.v2%2F0%3Fcontext%3D%257b%2522Tid%2522%253a%2522e7bf04a2-63c8-4a47-a0bd-28d0aa88f6ec%2522%252c%2522Oid%2522%253a%25224b26be16-cbcd-4f1e-8dd1-bc6aca28f563%2522%257d%26anon%3Dtrue&type=meetup-join&deeplinkId=0566019a-490d-40b6-aa10-d67c5793d3cc&directDl=true&msLaunch=true&enableMobilePage=true&suppressPrompt=true"
-              >současní studenti</a>
-          </li>
         </ul>
+        -->
       </section>
-      -->
 
       <section class="content wider" id="obory">
         <h2>Co u nás můžete studovat?</h2>
@@ -274,8 +272,8 @@
         <h2>Často kladené otázky</h2>
         <dl class="faq">
           <div>
-            <dt>Co se dozvím na dni otevřených dveří?</dt>
-            <dd>Ničeho se nebojte! Pedagogové vás provedou po učebnách, laboratoří i dílnách a představí vám naši školu. Rádi vám zodpovíme jakékoliv dotazy a pomůžeme vám vybrat ten pravý obor. <a href="#obory">Jaké obory nabízíme?</a></dd>
+            <dt>S kým budu mluvit anebo chatovat v rámci online konference?</dt>
+            <dd>K dispozici pro vás budou garanti oborů i vedení školy. Pokud máte jakékoliv otázky, velmi rádi vám je zodpovíme.</dd>
           </div>
           <div>
             <dt>Nemohu se rozhodnout, jaký obor zvolit. Poradíte mi?</dt>
@@ -286,7 +284,7 @@
             <dd>Můžete podat až 2 přihlášky (2 střední školy bez talentových zkoušek). Při vyplňování přihlášky se uvádí na obou tiskopisech stejné pořadí škol, oborů a termínů.</dd>
           </div> -->
           <div>
-            <dt>Bude i druhý den otevřených dveří?</dt>
+            <dt>Bude i třetí den otevřených dveří?</dt>
             <dd>Předpokládaný termín druhého dne otevřených dveří je 8.&nbsp;2.&nbsp;2022. V&nbsp;současné době nejsme schopni, vzhledem k&nbsp;aktuální situaci, akci s&nbsp;jistou přislíbit. Sledujte proto prosím <a href="https://pslib.cz/pro-uchazece/den-otevrenych-dveri" target="_blank">oficiální rozpis termínů DOD</a>.</dd>
           </div>
           <!-- <div>
@@ -316,12 +314,14 @@
         <p class="center"><a class="btn btn-outline strblue" href="https://pslib.cz/pro-uchazece/casto-kladene-otazky" target="_blank">zobrazit další otázky</a></p>
       </section>
 
+      <!--
       <section class="content bgblue">
         <h2>Krásné vánoční svátky</h2>
         <p>Vážení uchazeči, vážení rodiče, přátelé školy, dovolte nám poděkovat za vaši návštěvu a přízeň. Přejeme vám <strong>krásné prožití vánočních svátků a šťastný nový rok</strong>. Těšíme se, že se s vámi sejdeme během následujících dnů otevřených dveří, anebo s&nbsp;novými studenty na začátku příštího školního roku.</p>
         <p>Za všechny zaměstnace školy, <br />
         Jaroslav&ThickSpace;Semerád, Radek&ThickSpace;Havlík, Petr&nbsp;Zdráhala</p>
       </section>
+      -->
 
       <section class="content">
         <h2>Už nás sledujete?</h2>
@@ -391,8 +391,6 @@
     </script>
     <!-- End Cookie Consent -->
 
-    <!--
     <script src="./js/countdown.js"></script>
-    -->
   </body>
 </html>
